tests/programs/errors/exception_missing_method.reflow
type AppError fulfills Exception<string> {
    msg: string

    fn message(self): string {
        return self.msg
    }
    fn data(self): string {
        return self.msg
    }
}

fn main(): none {
}
